Correccion en ControladorTablero.